#1921: refactor info panel and fix bug with cropped expanded molecules

--- a/packages/ketcher-react/src/script/ui/views/components/StructEditor/InfoPanel.module.less
+++ b/packages/ketcher-react/src/script/ui/views/components/StructEditor/InfoPanel.module.less
@@ -1,9 +1,12 @@
-.infoPanel svg {
-  overflow: visible !important;
+.infoPanel {
   position: absolute;
   padding: 20px;
   background: white;
   border: 1px solid #b4b9d6;
   border-radius: 3px;
   pointer-events: none;
+
+  svg {
+    overflow: visible !important;
+  }
 }
